[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[isort]
skip=
    .tox
    .env
    venv
line_length = 120
indent = '    '
multi_line_output = 5
force_sort_within_sections = true
forced_separate = clove
length_sort = False

[flake8]
exclude =
    .git
    .tox
    docs
    venv
max-line-length = 120

[tox]
envlist = py36

[testenv]
commands=
    pip install https://github.com/lamden/python-bitcoinlib/archive/master.zip
    pip install -e '.[testing]'
    py.test tests
    isort -rc -c -df
    flake8
