[tool:pytest]
addopts = --cov=clove

[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[isort]
skip=
    .tox
    .env
    venv
not_skip=
    __init__.py
line_length = 120
indent = '    '
multi_line_output = 3
include_trailing_comma = True
force_sort_within_sections = True
forced_separate = clove
length_sort = False

[flake8]
exclude =
    .git
    .tox
    docs
    venv
max-line-length = 120

[tox]
envlist = py36

[testenv]
commands=
    pip install https://github.com/lamden/python-bitcoinlib/archive/master.zip
    pip install -e '.[testing]'
    pip install -e '.[dev]'
    py.test tests
    isort -rc -c -df
    flake8
